Make sonar fixes